2007-05-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: inserted footnotes about inline assembler labels,
	  thanks Jan Waclawek
	* src/mcs51/gen.c (aopPut): fixed part of bug 1723128 when result is
	  AOP_CRY and ruonly
	  (gencjneshort): optimized when left is AOP_DIR
	* src/SDCCglue.c (printIvalStruct): fixed other part of bug 1723128 for
	  initializing unions in a struct/array
	* support/regression/fwk/include/testfwk.h: added defines for data, near
	  and far for host and z80
	* support/regression/tests/bug1723128.c: new, added

2007-05-22 Borut Razem <borut.razem AT siol.net>

	* doc/knownbugs.html: updated

2007-05-21 Raphael Neider <rneider AT web.de>

	* src/pic16/glue.c (pic16_initPointer): avoid assertion, emit better
	  error message instead
	* src/pic/pcoderegs.c (pCodeOptime2pCodes): keep register state intact

2007-05-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/peeph.def (257.b): disabled to fix bug 1721024

2007-05-21 Raphael Neider <rneider AT web.de>

	* src/pic/pcoderegs.c (pCodeOptime2pCodes): fixed bogus optimization,
	  closes #1722392
	* src/regression/gpsim_assert.h,
	* src/regression/Makefile,
	* src/regression/pcodeopt.c: regression test for the above fix

2007-05-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCpeeph.c (labelIsUncondJump): ignore identical labels for
	  jumps to self, fixed bug 1717281

2007-05-10 Borut Razem <borut.razem AT siol.net>

	* support/scripts/gen_known_bugs.pl: cosmetic fix
	* doc/knownbugs.html: generated by gen_known_bugs.pl

2007-05-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (createFunction): also generate non-inlined version of
	  function for functions declared as "static inline"
	* src/SDCCast.c (fixupInline, inlineAddDecl): reset symbol state so
	  function can be inlined after non-inlined version generated.

2007-05-10 Borut Razem <borut.razem AT siol.net>

	* support/scripts/gen_known_bugs.pl: added script